<resources>
    /*Barre*/
    <string name="app_name">Project</string>

    /*Corps de l'appli*/
    <string name="hello_world">Hello World</string>

    <string name="msg">Salut tout le monde</string>
    <string name="button_text2">Calendrier</string>
    <string name="btn_aNotif">Ajouter la notification</string>
    <string name="button_test">Test your alcohol level !</string>
    <string name="btn_date">Date</string>

    /*Button test alcoolémie*/
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_e">Enter</string>
    <string name="text_test"></string>
    <string name="text_question">How much beer did you drink ?</string>

    <string name="button_intent">Beer</string>
    <string name="button_service">Download</string>

    /*menu_main*/
    <string name="calendar">toast me</string>
    <string name="research">research</string>


</resources>
