<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.project.ThirdActivity">


    <Button
        android:id="@+id/btn3"
        android:text="@string/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:text="@string/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn3"
        android:layout_alignBottom="@+id/btn3"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn6"
        android:text="@string/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn5"
        android:text="@string/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn6"
        android:layout_alignBottom="@+id/btn6"
        android:layout_alignLeft="@+id/btn2"
        android:layout_alignStart="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        android:text="@string/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_toLeftOf="@+id/btn5"
        android:layout_toStartOf="@+id/btn5" />

    <Button
        android:id="@+id/btn7"
        android:text="@string/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4" />

    <Button
        android:id="@+id/btn8"
        android:text="@string/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:text="@string/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btn0"
        android:text="@string/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn1"
        android:text="@string/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4" />

    <Button
        android:id="@+id/btn_e"
        android:text="@string/button_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8" />

    <EditText android:id="@+id/text_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:editable="false"
        android:cursorVisible="false"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_question"
        android:text="@string/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
